<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_main_content"
        >

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="@dimen/activity_main_tab_width"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_tab_bottom_new"
            android:id="@+id/activity_main_tab_bottom_new_textview"/>

        <TextView
            android:layout_width="@dimen/activity_main_tab_width"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_tab_bottom_publish"
            android:id="@+id/activity_main_tab_bottom_publish_textview"/>

        <TextView
            android:layout_width="@dimen/activity_main_tab_width"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_tab_bottom_setting"
            android:id="@+id/activity_main_tab_bottom_setting_textview"/>
    </LinearLayout>

</RelativeLayout>
